ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mksvk.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-service-one
            port:
              name: http
      - path: /adminer
        pathType: Prefix
        backend:
          service:
            name: adminer-service
            port:
              name: http


---

apiVersion: v1
kind: Service
metadata:
  name: php-service-one
  labels:
    app: php
spec:
  selector:
    app: php
  ports:
  - name: http
    port: 80
    targetPort: 80
